# augint-tools

./: .ai-shell.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ai-shell.toml  augint-tools.md  augint_tools.html  graphql-refresh-plan.md  index.html  pyproject.toml  renovate.json5  search.js  src.html
.claude/: settings.json
.github/: .ai-compliance.yaml  copilot-instructions.md
.github/workflows/: example-pipeline.yaml  pipeline.yaml  publish.yaml
augint_tools/: checks.html  cli.html  config.html  dashboard.html  detection.html  env.html  execution.html  git.html  github.html  ide.html  output.html  standardize.html  team_secrets.html  workspace_standardize.html
augint_tools/cli/: commands.html
augint_tools/standardize/: checks.html  verify.html
augint_tools/team_secrets/: age.html  checkout.html  doctor.html  keys.html  models.html  recipients.html  repo.html  sops.html  sync.html
ci-resources/: pytest-html.css
compliance/: license-report.html  license-report.json
coverage/: coverage.xml  test-report.html
coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_16b43582062d6b50___init___py.html  z_16b43582062d6b50_bookmarks_py.html  z_16b43582062d6b50_detect_py.html  z_16b43582062d6b50_steps_py.html  z_16b43582062d6b50_xml_py.html  z_22f0c487ce6d2290___init___py.html  z_22f0c487ce6d2290_runner_py.html  z_270a524b5752a820___init___py.html  z_270a524b5752a820_age_py.html  z_270a524b5752a820_checkout_py.html  z_270a524b5752a820_doctor_py.html  z_270a524b5752a820_keys_py.html  z_270a524b5752a820_models_py.html  z_270a524b5752a820_recipients_py.html  z_270a524b5752a820_repo_py.html  z_270a524b5752a820_sops_py.html  z_270a524b5752a820_sync_py.html  z_2eed843a9449c355___init___py.html  z_2eed843a9449c355__engine_py.html  z_2eed843a9449c355__handlers_py.html  z_2eed843a9449c355__models_py.html  z_2eed843a9449c355__registry_py.html  z_3e65d671b8d9b9e4___init___py.html  z_6891ff130f9f3ce2___init___py.html  z_6891ff130f9f3ce2_broken_ci_py.html  z_6891ff130f9f3ce2_coverage_py.html  z_6891ff130f9f3ce2_open_issues_py.html  z_6891ff130f9f3ce2_open_prs_py.html  z_6891ff130f9f3ce2_renovate_prs_py.html  z_6891ff130f9f3ce2_renovate_py.html  z_6891ff130f9f3ce2_service_missing_dev_py.html  z_6891ff130f9f3ce2_stale_prs_py.html  z_6891ff130f9f3ce2_yaml_engine_py.html  z_6d6026a93cbbb876___init___py.html  z_6d6026a93cbbb876_cli_py.html  z_6d6026a93cbbb876_issues_py.html  (+68 more)
docs/: graphql-refresh-plan.md
njx/: package-lock.json  package.json
rd_idea_post/: misc.xml  modules.xml
security/: bandit-report.json  pip-audit-report.json
src/: augint_tools.html
src/augint_tools/: __init__.py  checks.html  cli.html  config.html  dashboard.html  detection.html  env.html  execution.html  git.html  github.html  ide.html  output.html  team_secrets.html  workspace_standardize.py
superpowers/specs/: 2026-04-23-warm-start-animations-design.md
tests/fixtures/: ai-shell-full.toml  ai-shell-library.toml  ai-shell-service.toml  workspace-example.toml  workspace-example.yaml
tests/resources/: test.env
tests/unit/: test_awsprobe.py  test_cache_context.py  test_checks.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_common.py  test_dashboard_data.py  test_dashboard_helpers.py  test_dashboard_logging.py  test_deployments.py  test_detection.py  test_effect_sprite.py  test_env_auth.py  test_env_chezmoi.py  test_env_classify.py  test_env_cli.py  test_env_sync.py  test_error_log_screen.py  test_execution.py  test_git.py  test_github_cli.py  test_github_ops.py  test_gql.py  test_handlers.py  test_health.py  test_ide.py  test_layout_apply.py  test_output.py  test_pat.py  test_pulse.py  (+17 more)
woxom-secrets/: .gitignore  .sops.yaml  README.md
(+200 files in other folders)
