[project]
name = "augint-tools"
version = "5.37.0"
description = "CLI for AI-assisted repository and workspace workflows"
authors = [{name = "svange"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "defusedxml>=0.7.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.3,<0.8",
    "rich>=13.9.4,<15.0",
    "pygithub>=2.5.0,<3",
    "textual>=1.0.0,<2",
    "requests>=2.31.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0",
    "python-semantic-release>=10.3.1",
    "pre-commit>=4.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pip-licenses>=5.0.0",
    "pytest-html>=4.0.0",
    "pdoc>=15.0.0",
    "types-defusedxml>=0.7.0",
]

[project.scripts]
ai-tools = "augint_tools.cli.__main__:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "augint_tools"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "DTZ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["augint_tools"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "augint_tools.cli.commands.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "augint_tools.cli.__main__"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "augint_tools.dashboard.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["textual.*", "loguru", "dotenv", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers --timeout=30"
markers = [
    "tui: tests that boot the Textual TUI via app.run_test() -- may hang in headless CI",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/cli/*"]

[tool.coverage.report]
fail_under = 50

[tool.semantic_release]
assets = ["uv.lock"]
commit_message = "chore(release): augint-tools {version}\n\nAutomatically generated by python-semantic-release [skip ci]"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "augint-tools-v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/augint_tools/__init__.py:__version__"]
build_command = "uv lock && uv build"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "chore", "refactor"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
    '''ci(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

[dependency-groups]
dev = [
    "augint-github>=1.6.0",
    "augint-shell>=0.36.0",
    "pytest-timeout>=2.4.0",
]
